<resources>
    <string name="app_name">Transit Pay</string>
    <string name="password_trans">password_trans</string>
    <string name="phone_number_trans">phone_number_trans</string>
    <string name="continue_trans">continue_trans</string>
    <string name="signUp_login_trans">signUp_login_trans</string>
    <string name="welcome_trans">welcome_trans</string>
    <string name="message_trans">message_trans</string>

    <string name="card_number">Card Number</string>
    <string name="card_name">Card Name</string>
    <string name="card_exp">Expiration (MM/YY)</string>
    <string name="CVV">CVV</string>
    <string name="make_payment">Make Payment</string>
    <string name="trip_one">1 Trip</string>
    <string name="monthly_trip">Monthly pass</string>
    <string name="ten_trip">10 Trips</string>
    <string name="two_trip">2 Trips</string>
    <string name="threeday_trip">3-day pass</string>
    <string name="weekly_trip">Weekly pass</string>

    <string name="address">Single Fare</string>

    <string name="buy_button">Checkout Fare</string>
    <string name="description"></string>
    <string name="lauren_nobel">Transit Fare Type</string>
    <string name="merchant_id_not_set_message"><![CDATA[To request a Google Pay nonce, replace <b>ConfigHelper.GOOGLE_PAY_MERCHANT_ID</b> with your Google Pay Merchant ID.]]></string>
    <string name="merchant_id_not_set_title">Missing Google Pay Merchant ID</string>
    <string name="missing_application_id_message"><![CDATA[Please update <b>sqip.SQUARE_APPLICATION_ID</b> in <b>AndroidManifest.xml</b> if you want to be able to create a nonce.]]></string>
    <string name="missing_application_id_title">Missing Square Application ID</string>
    <string name="network_failure_title">Network Error</string>
    <string name="network_failure">There was an error processing the payment, please check your network connection.</string>
    <string name="pay_button">Pay </string>
    <string name="pay_with_card">Pay with card</string>
    <string name="place_your_order">Place your order</string>
    <string name="price">$3.75</string>
    <string name="refund_helper_text"></string>
    <string name="retry">Retry</string>
    <string name="server_host_not_set_message">Payment Successful</string>
    <string name="server_host_not_set_title">Nonce generated but not charged</string>
    <string name="ship_to">Purchase</string>
    <string name="successful_order_message">You have access to transportation, find your remaining transit fare displayed on the main page of the app</string>
    <string name="successful_order_title">Your order was successful</string>
    <string name="super_cookie">Super Cookie</string>
    <string name="total">Total</string>
    <string name="unsuccessful_order">Your order was not successful</string>

    //Strings for types of map
    <string name="title_activity_maps">Map</string>
    <string name="Retro_map">Retro Map</string>
    <string name="Normal_map">Normal Map</string>
    <string name="Dark_map">Dark Map</string>
    <string name="Cartoon_map">Cartoon Map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="satellite_map">Satelite Map</string>

    // Strings for Markers
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="poi">poi</string>
    <string name="dropped_pin">Custom Pin</string>

    //Strings for profile
    <string name="title_activity_profile">Account settings</string>

    //String info Activate Card
    <string name="info_Activate">CLICK ON "ACTIVATE CARD" AND WAIT FOR CONFIRMATION</string>
    <string name="skip">SKIP</string>
    <string name="Back">Button</string>
    <string name="trip_history">Trip history</string>


</resources>