<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/payment"
    tools:context=".PaymentActivity">



    <EditText
        android:id="@+id/card_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="338dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/card_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/card_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="410dp"

        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/card_number"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/et_custom"
        android:hint="@string/CVV"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="499dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:background="@drawable/et_custom"
        android:hint="@string/card_exp"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


    </RelativeLayout>

    <Button
        android:id="@+id/make_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn_custom"
        android:text="@string/make_payment"
        android:textColor="@android:color/black"
        app:backgroundTint="#FFCD05" />

</RelativeLayout>